name:                cont-io-playground
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lennart Spitzner
maintainer:          hexagoxel@hexagoxel.de
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.ContIO.Class
                       Control.Monad.ContIO
                       Playground
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.13,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: {
    FlexibleContexts
    FlexibleInstances

    ScopedTypeVariables
    RankNTypes

    MonadComprehensions
    LambdaCase
    MultiWayIf
    KindSignatures
    TypeApplications

    RecursiveDo
  }